etc/iptables.up.rules
# Generated by iptables-save v1.4.14 on Sat Nov 29 16:52:36 2014
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m multiport --dport 80 -j ACCEPT
# ssh
-A INPUT -p tcp --dport 11111 -j ACCEPT
# mail
-A INPUT -p tcp --dport 25 -j ACCEPT
# mosh
-A INPUT -p udp -m udp --dport 60000:61000 -j ACCEPT

-A INPUT -j DROP
-A FORWARD -j DROP
COMMIT
# Completed on Sat Nov 29 16:52:36 2014
